<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/activity_address_title"
    android:layout_margin="6dp"
    android:textSize="20sp"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/street_name"
    android:layout_margin="6dp"
    android:textSize="20sp"/>

  <EditText
    android:id="@+id/street"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_margin="6dp" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/street_number"
    android:layout_margin="6dp"
    android:textSize="20sp"/>

  <EditText
    android:id="@+id/number"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:inputType="number"
    android:layout_margin="6dp" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/city"
    android:layout_margin="6dp"
    android:textSize="20sp"/>

  <EditText
    android:id="@+id/city"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_margin="6dp" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/country"
    android:layout_margin="6dp"
    android:textSize="20sp"/>

  <EditText
    android:id="@+id/country"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_margin="6dp" />

  <Button
    android:id="@+id/address_next_button"
    android:layout_width="100dp"
    android:layout_height="50dp"
    android:layout_gravity="center"
    android:text="@string/next"
    android:textSize="20sp"/>

</LinearLayout>
