<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:tools="http://schemas.android.com/tools"
  android:orientation="vertical">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/activity_drop_title"
    android:layout_margin="10dp"
    android:textSize="20sp"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/contact"
    android:layout_margin="10dp"
    android:textSize="20sp"/>

  <TextView
    android:id="@+id/drop_contact"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:text="Israel Israel"
    android:textSize="20sp"
    android:layout_margin="10dp" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/address"
    android:layout_margin="10dp"
    android:textSize="20sp"/>

  <TextView
    android:id="@+id/drop_address"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:text="Main street"
    android:textSize="20sp"
    android:layout_margin="10dp" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/num_of_bags"
    android:layout_margin="10dp"
    android:textSize="20sp"/>

  <TextView
    android:id="@+id/bags"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:text="4"
    android:textSize="20sp"
    android:layout_margin="10dp" />

  <Button
    android:id="@+id/drop_button"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_gravity="center"
    android:text="@string/drop"
    android:textSize="20sp"/>

</LinearLayout>
