<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/activity_name_title"
    android:layout_margin="10dp"
    android:textSize="20sp"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/first_name"
    android:layout_margin="10dp"
    android:textSize="20sp"/>

  <EditText
    android:id="@+id/first_name"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_margin="10dp" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/last_name"
    android:layout_margin="10dp"
    android:textSize="20sp"/>

  <EditText
    android:id="@+id/last_name"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_margin="10dp" />

  <Button
    android:id="@+id/name_next_button"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_gravity="center"
    android:text="@string/next"
    android:textSize="20sp"/>

</LinearLayout>
